# dada

./: .gitignore  README.md  pullall.sh  pushall.sh  xxx.json
FaceRecognizer/: settings.gradle
FaceRecognizer/app/: build.gradle
GorillaLauncher/: .gitignore  settings.gradle
GorillaLauncher/gorilla.launcher/: build.gradle
GorillaMessenger/: aura.common  aura.gui  gorilla.client  settings.gradle
GorillaMessenger/gorilla.messenger/: build.gradle  proguard-rules.pro
GorillaService/: settings.gradle
GorillaService/app/: build.gradle
GorillaSysapp/: debugkeystore.jks  gorilla.service  settings.gradle
GorillaSysapp/aura.java.nlp/: build.gradle
GorillaSysapp/gorilla.service/: build.gradle
GorillaSysapp/gorilla.sysapp/: build.gradle
Modules/: .gitignore
Modules/aura.common/: build.gradle
Modules/aura.gui/: build.gradle
Modules/aura.nat/: CMakeLists.txt  build.gradle
Modules/aura.nat/src/androidTest/java/com/aura/aosp/aura/nat/: ExampleInstrumentedTest.java
Modules/aura.nat/src/main/: AndroidManifest.xml
Modules/aura.nat/src/main/cpp/: auranat.cpp  hello.cpp  levenshtein.cpp  libauranat.cpp  prime.cpp
Modules/aura.nat/src/main/java/com/aura/aosp/aura/nat/hello/: Hello.java
Modules/aura.nat/src/main/java/com/aura/aosp/aura/nat/levenshtein/: Levenshtein.java
Modules/aura.nat/src/main/java/com/aura/aosp/aura/nat/prime/: Prime.java
Modules/aura.nat/src/main/res/values/: strings.xml
Modules/aura.nat/src/test/java/com/aura/aosp/aura/nat/: ExampleUnitTest.java
Modules/gorilla.client/: build.gradle
Modules/gorilla.service/: build.gradle
(+442 files in other folders)
